# readtube

./: CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  ROADMAP.md  SKILL.md  batch.py  cache.py  chapters.py  docker-compose.yml  get_transcripts.py  package-lock.json  pyproject.toml  requirements.txt  tailwind.config.js  tts.py  web.py  web_worker.py
macos/: Makefile  project.yml
macos/Readtube/: ContentView.swift  Info.plist  ReadtubeApp.swift
macos/Readtube.xcodeproj/: project.pbxproj
macos/Readtube.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
macos/Readtube/Models/: AppSettings.swift  Article.swift  Enums.swift  Source.swift
macos/Readtube/Resources/: ReaderTemplate.html  Typography.css
macos/Readtube/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
macos/Readtube/Resources/Themes/: dark.css  default.css  minimal.css  modern.css
macos/Readtube/Services/: ArticlePipeline.swift  EPUBGenerator.swift  LLMService.swift  MarkdownToHTML.swift  OPMLImporter.swift  PromptTemplates.swift  TranscriptParser.swift  YTDLPService.swift
macos/Readtube/Views/Dashboard/: ArticleCardView.swift  DashboardView.swift
macos/Readtube/Views/Reader/: ReaderView.swift  ReaderWebView.swift
macos/Readtube/Views/Settings/: SettingsView.swift
macos/Readtube/Views/Sidebar/: SidebarView.swift
macos/Readtube/Views/Sources/: SourcesView.swift
macos/ReadtubeTests/: ArticlePipelineTests.swift  EPUBGeneratorTests.swift  IntegrationTests.swift  LLMServiceTests.swift  MarkdownToHTMLTests.swift  ModelTests.swift  OPMLImporterTests.swift  SwiftDataTests.swift  TranscriptParserTests.swift  YTDLPServiceTests.swift
readtube/: __init__.py  __main__.py  article.py  async_fetch.py  batch.py  cache.py  chapters.py  clean.py  cli.py  config.py  ebook.py  errors.py  genre.py  images.py  integrations.py  llm.py  pipeline.py  prompts.py  render.py  rss.py  scheduler.py  sponsorblock.py  themes.py  transcript.py  transcripts.py  translate.py  tts.py  video.py  videos.py
readtube/templates/: settings.html
readtube/web/: __init__.py  app.py  worker.py
tests/: conftest.py  test_cache.py  test_chapters.py  test_clean.py  test_cli.py  test_config.py  test_e2e.py  test_errors.py  test_genre.py  test_llm.py  test_new_modules.py  test_prompts.py  test_render.py  test_sponsorblock.py  test_unit.py  test_web.py
