[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readtube"
version = "0.1.0"
description = "Turn YouTube videos into beautifully typeset ebooks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Federico Carrone", email = "mail@fcarrone.com"}
]
keywords = ["youtube", "ebook", "epub", "transcript", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "yt-dlp>=2023.0.0",
    "youtube-transcript-api>=0.6.0",
    "ebooklib>=0.18",
    "markdown>=3.4",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]
tts = ["pyttsx3>=2.90", "gTTS>=2.3"]
translate = ["googletrans==4.0.0-rc1"]
llm = ["llama-cpp-python>=0.2.0"]
claude = ["anthropic>=0.20.0"]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
all = [
    "weasyprint>=60.0",
    "pyttsx3>=2.90",
    "gTTS>=2.3",
    "googletrans==4.0.0-rc1",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "llama-cpp-python>=0.2.0",
    "anthropic>=0.20.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[project.scripts]
readtube = "readtube.cli:main"
readtube-batch = "readtube.batch:main"
readtube-write = "readtube.article:main"
readtube-web = "readtube.web.app:main"

[project.urls]
Homepage = "https://github.com/unbalancedparentheses/readtube"
Repository = "https://github.com/unbalancedparentheses/readtube"
Issues = "https://github.com/unbalancedparentheses/readtube/issues"

[tool.setuptools]
packages = ["readtube", "readtube.web"]

[tool.setuptools.package-data]
readtube = ["templates/**/*.html", "static/**/*"]
