[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readtube"
version = "0.2.0"
description = "Turn YouTube videos into readable articles"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Federico Carrone", email = "mail@fcarrone.com"}
]
keywords = ["youtube", "article", "transcript", "yt-dlp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "yt-dlp>=2023.0.0",
    "youtube-transcript-api>=0.6.0",
]

[project.optional-dependencies]
epub = ["ebooklib>=0.18", "markdown>=3.4"]
html = ["markdown>=3.4"]
pdf = ["weasyprint>=60.0", "markdown>=3.4"]
claude = ["anthropic>=0.20.0"]
openai = ["openai>=1.0.0"]
all = [
    "ebooklib>=0.18",
    "markdown>=3.4",
    "weasyprint>=60.0",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[project.scripts]
readtube = "readtube.cli:main"

[project.urls]
Homepage = "https://github.com/unbalancedparentheses/readtube"
Repository = "https://github.com/unbalancedparentheses/readtube"
Issues = "https://github.com/unbalancedparentheses/readtube/issues"

[tool.setuptools]
packages = ["readtube"]
